--- a/extensions/Wikilog/style/wikilog.css
+++ b/extensions/Wikilog/style/wikilog.css
@@ -267,4 +267,9 @@ table.wl-calendar {
 	margin: 4px 0 0 0;
 }
 
+table.wl-archives td, table.wl-archives th { padding: 2px 5px; }
+table.wl-archives th { white-space: nowrap; }
+.TablePager_col_wlp_talk_updated, .TablePager_col_wlp_pubdate { font-family: monospace; font-size: 90%; white-space: nowrap; text-align: center; }
+table.wl-archives td.TablePager_col_wlp_num_comments { padding: 2px 0px; }
+
 /* kate: indent-mode normal; space-indent off; tab-width 4; */
