--- a/skins/ichick/main.css
+++ b/skins/ichick/main.css
@@ -96,7 +96,16 @@ p {
 	margin: .4em 0 .5em 0;
 	line-height: 1.5em;
 }
+
+div.paragraph {
+	margin: .4em 0 .5em 0;
+	line-height: 1.5em;
+}
 p img {
+	margin: 0;
+}
+
+div.paragraph img {
 	margin: 0;
 }
 
@@ -280,6 +289,11 @@ span.subpages {
 	margin: 0;
 	padding: 0;
 }
+
+#siteNotice div.paragraph {
+	margin: 0;
+	padding: 0;
+}
 .success {
 	color: green;
 	font-size: larger;
@@ -415,6 +429,8 @@ div.floatright, table.floatright {
 */
 }
 div.floatright p { font-style: italic; }
+
+div.floatright div.paragraph { font-style: italic; }
 div.floatleft, table.floatleft {
 	float: left;
 	clear: left;
@@ -428,6 +444,8 @@ div.floatleft, table.floatleft {
 */
 }
 div.floatleft p { font-style: italic; }
+
+div.floatleft div.paragraph { font-style: italic; }
 /* thumbnails */
 div.thumb {
 	margin-bottom: .5em;
@@ -1164,6 +1182,11 @@ span.changedby {
 	padding: 0;
 }
 
+.previewnote div.paragraph {
+	margin: 0;
+	padding: 0;
+}
+
 .editExternally {
 	border: 1px solid gray;
 	background-color: #ffffff;
@@ -1283,6 +1306,11 @@ p.revision_saved {
 	font-weight:bold;
 }
 
+div.paragraph.revision_saved {
+	color: green;
+	font-weight:bold;
+}
+
 #mw_trackbacks {
 	border: solid 1px #bbbbff;
 	background-color: #eeeeff;
@@ -1348,6 +1376,10 @@ div#searchTargetHide {
 }
 
 #powersearch p {
+	margin-top:0px;
+}
+
+#powersearch div.paragraph {
 	margin-top:0px;
 }
 
