--- a/skins/custis/body.css
+++ b/skins/custis/body.css
@@ -50,7 +50,9 @@ a:hover {color: #173A7B;} /* dark blue */
 
 #toc a {color: #808080;} /* blue */
 #toc a:hover {color: #173A7B;} /* dark blue */
-#toc p a:visited {color: #2153B0;} /* blue */
+#toc p a:visited {color: #2153B0;}
+
+#toc div.paragraph a:visited {color: #2153B0;} /* blue */
 
 #footer a {color: #999999;}
 #footer a:hover {color: #173A7B;} /* dark blue */
@@ -143,6 +145,8 @@ div.floatright, table.floatright {
 */
 }
 div.floatright p { font-style: italic; }
+
+div.floatright div.paragraph { font-style: italic; }
 div.floatleft, table.floatleft {
     float: left;
     position: relative;
@@ -155,6 +159,8 @@ div.floatleft, table.floatleft {
 */
 }
 div.floatleft p { font-style: italic; }
+
+div.floatleft div.paragraph { font-style: italic; }
 /* thumbnails */
 div.thumb {
     margin-bottom: 0.5em;
@@ -234,6 +240,8 @@ tt {
 #toc .tocindent {margin-left: 1em;}
 #toc .tocline {margin-bottom: 0px;}
 #toc p {margin: 0}
+
+#toc div.paragraph {margin: 0}
 #toc .editsection {margin-top: 0.7em;}
 /* END Table of Contents */
 
@@ -254,6 +262,8 @@ tt {
 	}
 
 #catlinks p {margin: 0.5em;}
+
+#catlinks div.paragraph {margin: 0.5em;}
 
 /* emulate center */
 .center {
