--- a/skins/dumphtml/body.css
+++ b/skins/dumphtml/body.css
@@ -38,7 +38,9 @@ acronym, abbr, span.caps {
 a {color: #2153B0;} /* blue */
 a:hover {color: #173A7B;} /* dark blue */
 
-p a:visited {color: #FD9A26;} /* orange */
+p a:visited {color: #FD9A26;}
+
+div.paragraph a:visited {color: #FD9A26;} /* orange */
 #content a.new {color: green;} /* green */
 
 #column-one a:hover {color: #173A7B;} /* dark blue */
@@ -49,7 +51,9 @@ p a:visited {color: #FD9A26;} /* orange */
 
 #toc a {color: #808080;} /* blue */
 #toc a:hover {color: #173A7B;} /* dark blue */
-#toc p a:visited {color: #2153B0;} /* blue */
+#toc p a:visited {color: #2153B0;}
+
+#toc div.paragraph a:visited {color: #2153B0;} /* blue */
 
 #footer a {color: #999999;}
 #footer a:hover {color: #173A7B;} /* dark blue */
@@ -138,6 +142,8 @@ div.floatright, table.floatright {
 */
 }
 div.floatright p { font-style: italic; }
+
+div.floatright div.paragraph { font-style: italic; }
 div.floatleft, table.floatleft {
     float: left;
     position: relative;
@@ -150,6 +156,8 @@ div.floatleft, table.floatleft {
 */
 }
 div.floatleft p { font-style: italic; }
+
+div.floatleft div.paragraph { font-style: italic; }
 /* thumbnails */
 div.thumb {
     margin-bottom: 0.5em;
@@ -229,6 +237,8 @@ tt {
 #toc .tocindent {margin-left: 1em;}
 #toc .tocline {margin-bottom: 0px;}
 #toc p {margin: 0}
+
+#toc div.paragraph {margin: 0}
 #toc .editsection {margin-top: 0.7em;}
 /* END Table of Contents */
 
@@ -249,3 +259,5 @@ tt {
 	}
 
 #catlinks p {margin: 0.5em;}
+
+#catlinks div.paragraph {margin: 0.5em;}
