--- a/extensions/HaloACL/skins/haloacl_toolbar.css
+++ b/extensions/HaloACL/skins/haloacl_toolbar.css
@@ -1,3 +1,4 @@
 /* styles used by HaloACL toolbar */
 #hacl_toolbar { border: 1px solid gray; background-color: #eee; padding: 5px; margin-bottom: 4px; }
 #hacl_toolbar select { vertical-align: middle; }
+#hacl_toolbar_global_acl { position: relative; background-color: white; padding: 5px; border: 1px solid gray; }
