--- a/extensions/HaloACL/skins/haloacl.css
+++ b/extensions/HaloACL/skins/haloacl.css
@@ -31,3 +31,4 @@ p.inactive, p.inactive input, p.inactive select { color: gray; }
 .hacl_ti_a { color: white; background-color: #008; cursor: pointer; padding: 1px 3px; }
 .hacl_dis { background-color: white; color: gray; }
 .act_disabled { color: gray; }
+.hacl_embed_disabled { color: gray; }
