Bug 80752 - initial font size

--- a/extensions/S5SlideShow/s5-base.css
+++ b/extensions/S5SlideShow/s5-base.css
@@ -17,7 +17,7 @@ sup {font-size: smaller; line-height: 1px;}
 .slide table ul {margin-left: 1em;}
 .slide dd {margin-left: 6%;}
 
-div#footer {font-size: 20pt; font-weight: bold; padding: 1em 0;}
+div#footer {font-size: 20pt; padding: 1em 0;}
 #footer h1, #footer h2 {display: block; padding: 0 1em;}
 #footer h2 {font-style: italic;}
 
