Bug 81628 - "noslide" and "slideonly" classes

--- a/extensions/S5SlideShow/s5-base.css
+++ b/extensions/S5SlideShow/s5-base.css
@@ -47,6 +47,8 @@ ul.urls {list-style: none; display: inline; margin: 0;}
 .external {border-bottom: 1px dotted gray;}
 html>body .external {border-bottom: none;}
 
+.slide .slideonly { display: none; }
+
 /* diagnostics
 
 li:after {content: " [" attr(class) "]"; color: #F88;}
