--- a/skins/ichick/main.css
+++ b/skins/ichick/main.css
@@ -12,14 +12,9 @@
 	padding: 0;
 }
 #content {
-	margin: 2.8em 0 0 0;
-	padding: 0 1em 1em 1em;
-	position: relative;
-	z-index: 2;
-}
-#content {
 	background: white;
 	color: black;
+	padding: 0 1em 1em 1em;
 	border: 1px solid #aaa;
 	border-right: none;
 	line-height: 1.5em;
@@ -654,7 +649,9 @@ special external link styling */
 	background-color: white;
 	color: black;
 	border-collapse: collapse;
-	border: 1px solid #aaa;
+	border-style: solid;
+	border-color: #aaa;
+	border-width: 0 0 1px 0;
 	padding: 0 .8em .3em .5em;
 }
 .portlet h1,
@@ -679,7 +676,7 @@ special external link styling */
  * Invisible controls
  */
 
-#p-navigation, #p-tb {
+#p-navigation, #p-tb, #p-personal, #p-cactions {
     display: block;
     width: auto;
     height: auto;
@@ -689,7 +686,7 @@ special external link styling */
 #p-navigation div, #p-tb div {
     border-top-style: none;
 }
-#p-tb li, #p-tb ul, #p-navigation li, #p-navigation ul {
+#p-tb li, #p-tb ul, #p-navigation li, #p-navigation ul, #p-personal ul, #p-personal li, #p-cactions ul, #p-cactions li {
     white-space: nowrap;
     display: inline;
     position: relative;
@@ -698,64 +695,26 @@ special external link styling */
 }
 #p-wikilogcalendar { display: none }
 
-#p-navigation h5, #p-logo, #p-tb h5, #p-search, #footer {
+#p-navigation h5, #p-logo, #p-tb h5, #p-personal h5, #p-cactions h5, #p-search, #footer {
 	display: none;
+}
+#p-cactions .new a {
+	color: #ba0000;
+}
+#p-cactions li.istalk {
+	margin-right: 0;
+}
+#p-cactions li.istalk a {
+	padding-right: .5em;
+}
+#p-cactions #ca-addsection a {
+	padding-left: .4em;
+	padding-right: .4em;
 }
 
 /**
  * the personal toolbar
  */
-#p-personal {
-	position: absolute;
-	left: 0;
-	top: 0;
-	z-index: 0;
-}
-#p-personal {
-	width: 100%;
-	white-space: nowrap;
-	padding: 0;
-	margin: 0;
-	border: none;
-	background: none;
-	overflow: visible;
-	line-height: 1.2em;
-}
-#p-personal h5 {
-	display: none;
-}
-#p-personal .portlet,
-#p-personal .pBody {
-	z-index: 0;
-	padding: 0;
-	margin: 0;
-	border: none;
-	overflow: visible;
-	background: none;
-}
-/* this is the ul contained in the portlet */
-#p-personal ul {
-	border: none;
-	line-height: 1.4em;
-	color: #2f6fab;
-	padding: 0 2em 0 3em;
-	margin: 0;
-	text-align: right;
-	list-style: none;
-	z-index: 0;
-	background: none;
-	cursor: default;
-}
-#p-personal li {
-	z-index: 0;
-	border: none;
-	padding: 0;
-	display: inline;
-	color: #2f6fab;
-	margin-left: 1em;
-	line-height: 1.2em;
-	background: none;
-}
 #p-personal li a {
 	text-decoration: none;
 	color: #005896;
@@ -785,97 +744,14 @@ li#pt-login {
 #p-personal li.active {
 	font-weight: bold;
 }
-/*
-** the page-related actions- page/talk, edit etc
-*/
-#p-cactions {
-	position: absolute;
-	top: 1.3em;
-	left: 0;
-	margin: 0;
-	white-space: nowrap;
-	width: 76%;
-	line-height: 1.1em;
-	overflow: visible;
-	background: none;
-	border-collapse: collapse;
-	padding-left: 1em;
-	list-style: none;
-	font-size: 95%;
-}
-#p-cactions ul {
-	list-style: none;
-}
-#p-cactions li {
-	display: inline;
-	border: 1px solid #aaa;
-	border-bottom: none;
-	padding: 0 0 .1em 0;
-	margin: 0 .3em 0 0;
-	overflow: visible;
-	background: white;
-}
-#p-cactions li.selected {
-	border-color: #fabd23;
-	padding: 0 0 .2em 0;
-	font-weight: bold;
-}
-#p-cactions li a {
-	background-color: #fbfbfb;
-	color: #002bb8;
-	border: none;
-	padding: 0 .8em .3em;
-	position: relative;
-	z-index: 0;
-	margin: 0;
-	text-decoration: none;
-}
-#p-cactions li.selected a {
-	z-index: 3;
-	padding: 0 1em .2em!important;
-	background-color: white;
-}
-#p-cactions .new a {
-	color: #ba0000;
-}
-#p-cactions li a:hover {
-	z-index: 3;
-	text-decoration: none;
-	background-color: white;
-}
-#p-cactions h5 {
-	display: none;
-}
-#p-cactions li.istalk {
-	margin-right: 0;
-}
-#p-cactions li.istalk a {
-	padding-right: .5em;
-}
-#p-cactions #ca-addsection a {
-	padding-left: .4em;
-	padding-right: .4em;
-}
-/* offsets to distinguish the tab groups */
-li#ca-talk {
-	margin-right: 1.6em;
-}
-li#ca-watch, li#ca-unwatch, li#ca-varlang-0, li#ca-print {
-	margin-left: 1.6em;
-}
-#p-cactions .pBody {
-	font-size: 1em;
-	background-color: transparent;
-	color: inherit;
-	border-collapse: inherit;
-	border: 0;
-	padding: 0;
-}
-#p-cactions .hiddenStructure {
-	display: none;
-}
 #p-cactions li a {
 	text-transform: lowercase;
+}
+#p-cactions li.selected {
+	border: 1px solid gray;
+	background: #f0f0f0;
+	padding: 2px 5px;
+	font-weight: bold;
 }
 
 #p-lang {
