--- a/extensions/BatchEditor/BatchEditor.css
+++ b/extensions/BatchEditor/BatchEditor.css
@@ -1,3 +1,3 @@
-.addpages { margin-top: -1em; }
-.addpages div { display: block; padding: 2px; text-align: left; }
+.addpages { margin-top: -1em; float: right; }
+.addpages div { display: block; float: none; padding: 2px; text-align: left; }
 .addpages div.ap_catname { text-align: right; }
